--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 project(ref00d)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3 -nostdlib")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
 add_executable(ref00d
@@ -19,15 +19,16 @@ add_executable(ref00d
 )
 
 target_link_libraries(ref00d
-  taihenForKernel_stub
-  taihenModuleUtils_stub
   SceIofilemgrForDriver_stub
   SceKernelUtilsForDriver_stub
   SceSysclibForDriver_stub
-  SceSysmemForDriver_stub
-  SceDebugForDriver_stub
-  SceNpDrmForDriver_stub
-  SceRegMgrForDriver_stub
+  taihenForKernel_stub
+  taihenModuleUtils_stub
+)
+
+set_target_properties(ref00d
+  PROPERTIES LINK_FLAGS "-nostdlib"
+  COMPILE_FLAGS "-D__VITA_KERNEL__"
 )
 
 vita_create_self(ref00d.skprx ref00d
