Update reF00D to v1.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,30 +8,45 @@ if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   endif()
 endif()
 
-project(ref00d)
+project(reF00D)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3 -fno-inline")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
-add_executable(ref00d
+enable_language(C ASM)
+
+add_executable(reF00D
   src/main.c
+  src/ref00d_utils.c
+  src/ref00d_kprx_auth.c
+  src/ref00d_kprx_auth_keys_release.c
+  src/ref00d_aes_ecb.S
 )
 
-target_link_libraries(ref00d
-  SceIofilemgrForDriver_stub
-  SceKernelUtilsForDriver_stub
+target_link_libraries(reF00D
+  SceCpuForDriver_stub
+  SceDebugForDriver_stub
+  ScePmMgrForDriver_stub
+  SceSblAIMgrForDriver_stub
+  SceSblSsMgrForDriver_stub
   SceSysclibForDriver_stub
+  SceSysmemForDriver_stub
+  SceKernelUtilsForDriver_stub
+  SceThreadmgrForDriver_stub
+  SceModulemgrForDriver_stub
   taihenForKernel_stub
   taihenModuleUtils_stub
 )
 
-set_target_properties(ref00d
+set_target_properties(reF00D
   PROPERTIES LINK_FLAGS "-nostdlib"
   COMPILE_FLAGS "-D__VITA_KERNEL__"
 )
 
-vita_create_self(ref00d.skprx ref00d
+vita_create_self(reF00D.skprx reF00D
   CONFIG exports.yml
   UNSAFE
 )
+
+vita_create_stubs(stubs reF00D ${CMAKE_SOURCE_DIR}/exports.yml KERNEL)
