Improves the startup speed of reF00D
Old commit:`[reF00D                     ]:Starting...  OK     102863usec`
New commit:`[reF00D                     ]:Starting...  OK       6628usec`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set_target_properties(reF00D
 vita_create_self(reF00D.skprx reF00D
   CONFIG exports.yml
   UNSAFE
+  STRIPPED
 )
 
 vita_create_stubs(stubs reF00D ${CMAKE_SOURCE_DIR}/exports.yml KERNEL)
