Adjustment to code
Add many error check
Auth header a little faster
Load segments a little faster
Fix header include path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 project(reF00D)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3 -fno-inline")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -Os -fno-inline")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
 enable_language(C ASM)
@@ -22,6 +22,7 @@ add_executable(reF00D
   src/ref00d_kprx_auth.c
   src/ref00d_kprx_auth_keys_release.c
   src/ref00d_aes_cbc.S
+  src/ref00d_rsa_engine.c
 )
 
 target_link_libraries(reF00D
