Cleanup the code.
And remove encrypted SCE key.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 project(reF00D)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -Os -fno-inline")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O2 -fno-inline")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
 enable_language(C ASM)
@@ -20,7 +20,6 @@ add_executable(reF00D
   src/main.c
   src/ref00d_utils.c
   src/ref00d_kprx_auth.c
-  src/ref00d_kprx_auth_keys_release.c
   src/ref00d_aes_cbc.S
   src/ref00d_rsa_engine.c
 )
@@ -43,13 +42,19 @@ target_link_libraries(reF00D
 
 set_target_properties(reF00D
   PROPERTIES LINK_FLAGS "-nostdlib"
-  COMPILE_FLAGS "-D__VITA_KERNEL__"
+  COMPILE_FLAGS "-D__PSP2_KERNEL__"
 )
 
 vita_create_self(reF00D.skprx reF00D
   CONFIG exports.yml
   UNSAFE
   STRIPPED
+  REL_OPTIMIZE
 )
 
 vita_create_stubs(stubs reF00D ${CMAKE_SOURCE_DIR}/exports.yml KERNEL)
+
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/ref00d_kprx_auth.h DESTINATION "$ENV{VITASDK}/arm-vita-eabi/include")
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/build/stubs/libReAuthMgr_stub.a DESTINATION "$ENV{VITASDK}/arm-vita-eabi/lib")
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/build/stubs/libReAuthMgrForDebugger_stub.a DESTINATION "$ENV{VITASDK}/arm-vita-eabi/lib")
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/build/stubs/libReAuthMgrForKernel_stub.a DESTINATION "$ENV{VITASDK}/arm-vita-eabi/lib")
